Bug 155029 - Form control: Border color of Text controls won't be shown after load
Summary: Form control: Border color of Text controls won't be shown after load
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.2.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Textbox
  Show dependency treegraph
 
Reported: 2023-04-26 10:28 UTC by Robert Großkopf
Modified: 2023-05-06 06:55 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-04-26 10:28:32 UTC
Open a new Writer document.
Go to Form → Text Box.
Draw a text box.
Right mouse click on the box → Control properties.
General → Border Color: Set to something like "Green" (not: Default).
Save the file and close the file.
Reopen the file: Border Color will be shown as dark grey. Chosen color hasn't been saved.

This bug appears together with bug 152974

Appears first in LO 7.5.0.3 here, doesn't appear in LO 7.4.6.2. When opening the document in LO 7.4.6.2 the text box won't be shown with a flat border. It will be shown as 3D → bug 152974

Tested with OpenSUSE 15.4 64bit rpm Linux.
Comment 1 Jochen 2023-04-30 10:15:29 UTC
With Windoes 10 this problem don´t exist
Comment 2 Jochen 2023-04-30 10:16:40 UTC
With Windows 10 this problem don´t exist
Comment 3 Jochen 2023-04-30 10:17:47 UTC Comment hidden (obsolete)
Comment 4 Jochen 2023-04-30 16:39:32 UTC
Sorry... test with LO 7.3.x was o.k.

Test with LO 7.5.2.2 and Windows 10: I can confirm the bug.
Comment 5 raal 2023-05-02 17:46:39 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.5.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 f07b8d8187064c91a1f7be039f69cf8a0a94e6d4 is the first bad commit
commit f07b8d8187064c91a1f7be039f69cf8a0a94e6d4
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Oct 4 21:41:37 2022 +0200

    source ea36e0502c0bc381577cfa1b1a7fedf0f05d1d72

140942: tdf#150786 use a 'standard' theme for form controls | https://gerrit.libreoffice.org/c/core/+/140942
Comment 6 Caolán McNamara 2023-05-04 09:24:30 UTC
looks like I should have put that code *before* updateFromModel is called
Comment 7 Commit Notification 2023-05-04 14:44:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/96a403b9b12fbea4cd1d72c55597dd64023de465

Resolves: tdf#155029 set StandardStyles before updateFromModel

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2023-05-04 14:45:04 UTC
That seems to keep the original problem fixed and avoid this one too. Done in trunk, backport to 7-5 in gerrit.
Comment 9 BogdanB 2023-05-04 16:28:04 UTC
Verified: fixed.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fa0c012d6c06e9a92093dacf997fe3151272648e
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 10 Commit Notification 2023-05-05 08:48:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0e14dbc9ecdf6abae3ae3089e3b4e22f27dd4cb1

Resolves: tdf#155029 set StandardStyles before updateFromModel

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Robert Großkopf 2023-05-06 06:55:49 UTC
Tested with daily build from 2023-05-06. Works know as expected. 

Thought it would also solve bug 152974, which appeared at the same version, but it doesn't.