Resolves: tdf#155029 set StandardStyles before updateFromModel

otherwise it overrides custom settings set by the model properties

Change-Id: If5898aba3f2701b6d6bdaed99f9cb01174e53613
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151370
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>